# gauth-rs

./: .gitignore  Cargo.toml  LICENSE  LICENSE-MIT  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: build-and-test.yml  ci.yaml  coverage.yml  release.yml  tag.yml
examples/: async_token_provider.rs
src/: credentials.rs  errors.rs  lib.rs
src/app/: credentials.rs  errors.rs  mod.rs
src/serv_account/: errors.rs  jwt.rs  mod.rs
src/token_provider/: errors.rs  mod.rs
test_fixtures/: oauth-credentials.json  service-account-key.json
