[package]
description = "HTTP Client for Google OAuth2"
name = "gauth"
version = "0.3.1"
authors = ["Simon Makarski <code@makarski.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/makarski/rust_google_oauth2"
keywords = ["google-oauth2"]
categories = ["api-bindings"]

[dependencies]
url = "1.7.2"
serde = "1"
serde_json = "1.0.38"
serde_derive = "1"
dirs = "1.0"
reqwest = "0.9.11"
mockito = "0.17.0"
