[package]
description = "HTTP Client for Google OAuth2"
name = "gauth"
version = "0.5.0"
authors = ["Simon Makarski <code@makarski.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/makarski/rust_google_oauth2"
keywords = ["google-oauth2"]
categories = ["api-bindings"]

[dependencies]
url = "^2.4.1"
serde = "1"
serde_json = "1.0.38"
serde_derive = "1"
dirs = "1.0"
reqwest = "0.9.11"
mockito = "1.2.0"
chrono = "0.4.28"
base64 = "0.21.3"
ring = "0.16.20"
thiserror = "1.0.48"
